Drop deprecated code and APIs. Modernize the pom. Update maven coordinates. Min version of Java set to 21.